--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.1",
     "glob": "^10.3.10",
     "ioredis": "^5.3.2",
     "joi": "^17.12.1",
