--- a/apps/lightning/tsconfig.json
+++ b/apps/lightning/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "../../resources/dist/apps/lightning",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
