--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@swc/cli": "^0.3.6",
     "@swc/core": "^1.3.107",
     "@types/glob": "^8.1.0",
+    "@types/js-yaml": "^4.0.9",
     "axios": "^1.6.7",
     "cache-manager": "^5.4.0",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -70,6 +71,7 @@
     "glob": "^10.3.10",
     "ioredis": "^5.3.2",
     "joi": "^17.12.1",
+    "js-yaml": "^4.1.0",
     "listr2": "^8.0.2",
     "logform": "^2.6.0",
     "nestjs-i18n": "^10.4.0",
