--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install && pnpx prisma generate && pnpm build:shared && pnpm build",
     "generate": "pnpx prisma generate",
+    "push": "cross-env DATABASE_URL=\"mongodb://root:Lion14789632!@182.61.28.142:27017/six\" pnpx prisma db push",
     "lint-staged": "lint-staged"
   },
   "author": "Zero <gczgroup@qq.com>",
@@ -54,7 +55,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/throttler": "^5.1.1",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "latest",
     "@rollup/plugin-swc": "^0.3.0",
     "@swc/cli": "^0.3.6",
     "@swc/core": "^1.3.107",
@@ -78,7 +79,7 @@
     "nestjs-i18n": "^10.4.0",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
-    "prisma": "^5.9.1",
+    "prisma": "latest",
     "reflect-metadata": "^0.1.13",
     "rollup": "^4.9.6",
     "rxjs": "^7.8.1",
