--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "v29",
+  "license": "GPL-3.0",
   "scripts": {
     "dev:passport": "pnpm -F cc.naily.six.passport start:dev",
     "dev:light": "pnpm -F cc.naily.six.lightning start:dev",
+    "dev:backend": "pnpm -F cc.naily.six.panel.backend start:dev",
+    "dev:frontend": "pnpm -F cc.naily.six.panel.frontend dev",
     "build": "tsx scripts/buildDeps.ts",
     "build:passport": "pnpm -F cc.naily.six.passport build",
     "build:light": "pnpm -F cc.naily.six.lightning build",
@@ -44,6 +47,7 @@
   "dependencies": {
     "@apple/app-store-server-library": "^1.0.1",
     "@nailyjs.nest.modules/app-store": "^1.0.5",
+    "@nailyjs.nest.modules/prisma": "^1.3.6",
     "@nailyjs.nest.modules/tencentcloud": "^1.0.6",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/cache-manager": "^2.2.0",
