feat: add broswer plugin store

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,8 @@
     "panel-backend": "admin",
     "panel-frontend": "admin",
     "dtos": "controller",
-    "subscribers": "class"
-  }
+    "subscribers": "class",
+    "subschemas": "prisma"
+  },
+  "prisma.fileWatcher": true
 }
