--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "latest",
     "@rollup/plugin-swc": "^0.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@swc/cli": "^0.3.6",
     "@swc/core": "^1.3.107",
     "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
     "cache-manager": "^5.4.0",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -84,6 +86,7 @@
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "prisma": "latest",
+    "prisma-multischema": "^1.1.4",
     "reflect-metadata": "^0.1.13",
     "rollup": "^4.9.6",
     "rxjs": "^7.8.1",
