docs(changeset): feat: add tag module, chore logger、prisma

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev:light": "pnpm -F cc.naily.six.lightning start:dev",
     "dev:backend": "pnpm -F cc.naily.six.panel.backend start:dev",
     "dev:frontend": "pnpm -F cc.naily.six.panel.frontend dev",
+    "dev:common": "pnpm -F cc.naily.six.common start:dev",
     "build": "tsx scripts/buildDeps.ts",
     "build:passport": "pnpm -F cc.naily.six.passport build",
     "build:light": "pnpm -F cc.naily.six.lightning build",
+    "build:common": "pnpm -F cc.naily.six.common build",
     "build:database": "pnpm -F cc.naily.six.database build",
     "build:shared": "pnpm -F cc.naily.six.shared build",
     "build:auth": "pnpm -F cc.naily.six.auth build",
