--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "swagger-ui-express": "^5.0.0",
     "tencentcloud-sdk-nodejs": "^4.0.792",
     "tsx": "^4.7.0",
+    "unocss": "^0.58.4",
     "winston": "^3.11.0"
   },
   "peerDependencies": {
