--- a/panel/panel-backend/tsconfig.json
+++ b/panel/panel-backend/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "../../resources/dist/panel/panel-backend",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
