--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -13,15 +13,20 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.3",
     "axios": "^1.6.1",
+    "alova": "^2.17.0",
     "less": "^4.2.0",
     "pinia": "^2.1.7",
     "unocss": "^0.58.4",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.9.1",
     "vue-facing-decorator": "^3.0.4",
     "vue-router": "^4.2.5",
     "naive-ui": "^2.37.3",
     "vfonts": "^0.0.3",
-    "@vicons/carbon": "^0.12.0"
+    "@vicons/carbon": "^0.12.0",
+    "@vicons/ionicons5": "^0.12.0",
+    "@unocss/preset-uno": "^0.58.5",
+    "pinia-plugin-persistedstate": "^3.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
