--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@swc/core": "^1.3.107",
     "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
     "cache-manager": "^5.4.0",
@@ -83,6 +84,7 @@
     "js-yaml": "^4.1.0",
     "listr2": "^8.0.2",
     "logform": "^2.6.0",
+    "md5": "^2.3.0",
     "mongodb": "^6.3.0",
     "nestjs-i18n": "^10.4.0",
     "nodemailer": "^6.9.9",
