--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@swc/cli": "^0.3.6",
     "@swc/core": "^1.3.107",
+    "@types/bcrypt": "^5.0.2",
     "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.9",
     "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.4.0",
     "cache-manager-ioredis-yet": "^1.2.2",
     "chalk": "^4",
