--- a/apps/shop/package.json
+++ b/apps/shop/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shop",
-  "version": "0.0.1",
+  "name": "cc.naily.six.shop",
+  "version": "6.0.0",
   "description": "",
   "author": "",
   "private": true,
