--- a/apps/forum/package.json
+++ b/apps/forum/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cc.naily.six.shop",
+  "name": "cc.naily.six.forum",
   "version": "6.0.0",
   "description": "",
   "author": "",
@@ -9,9 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=production nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node ../../resources/dist/apps/shop/src/main.js",
+    "start:prod": "cross-env NODE_ENV=production node ../../resources/dist/apps/forum/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
