--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:backend": "pnpm -F cc.naily.six.panel.backend start:dev",
     "dev:frontend": "pnpm -F cc.naily.six.panel.frontend dev",
     "dev:common": "pnpm -F cc.naily.six.common start:dev",
+    "dev:forum": "pnpm -F cc.naily.six.forum start:dev",
     "build": "tsx scripts/buildDeps.ts",
     "build:passport": "pnpm -F cc.naily.six.passport build",
     "build:light": "pnpm -F cc.naily.six.lightning build",
