feat(forum): add apps & fix danger bug

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:frontend": "pnpm -F cc.naily.six.panel.frontend dev",
     "dev:common": "pnpm -F cc.naily.six.common start:dev",
     "dev:forum": "pnpm -F cc.naily.six.forum start:dev",
+    "dev:app": "pnpm -F cc.naily.six.app start:dev",
+    "dev:gpt": "pnpm -F cc.naily.six.gpt start:dev",
     "build": "tsx scripts/buildDeps.ts",
     "build:passport": "pnpm -F cc.naily.six.passport build",
     "build:light": "pnpm -F cc.naily.six.lightning build",
@@ -15,10 +17,17 @@
     "build:database": "pnpm -F cc.naily.six.database build",
     "build:shared": "pnpm -F cc.naily.six.shared build",
     "build:auth": "pnpm -F cc.naily.six.auth build",
+    "build:forum": "pnpm -F cc.naily.six.forum build",
+    "build:app": "pnpm -F cc.naily.six.app build",
+    "build:gpt": "pnpm -F cc.naily.six.gpt build",
     "build:frontend": "pnpm -F cc.naily.six.panel.frontend build",
     "start:frontend": "pnpm -F cc.naily.six.panel.frontend preview",
     "start:passport": "pnpm -F cc.naily.six.passport start:prod",
     "start:light": "pnpm -F cc.naily.six.lightning start:prod",
+    "start:common": "pnpm -F cc.naily.six.common start:prod",
+    "start:app": "pnpm -F cc.naily.six.app start:prod",
+    "start:forum": "pnpm -F cc.naily.six.forum start:prod",
+    "start:gpt": "pnpm -F cc.naily.six.gpt start:prod",
     "format": "prettier --write ./",
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install && pnpx prisma generate && pnpm build:shared && pnpm build",
