--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -8,25 +8,20 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.23.3",
     "axios": "^1.6.1",
-    "alova": "^2.17.0",
     "less": "^4.2.0",
     "pinia": "^2.1.7",
     "unocss": "^0.58.4",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.9.1",
     "vue-facing-decorator": "^3.0.4",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue-router": "^4.2.5",
-    "naive-ui": "^2.37.3",
-    "vfonts": "^0.0.3",
-    "@vicons/carbon": "^0.12.0",
-    "@vicons/ionicons5": "^0.12.0",
-    "@unocss/preset-uno": "^0.58.5",
-    "pinia-plugin-persistedstate": "^3.2.1"
+    "naive-ui": "^2.37.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -37,9 +32,12 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
-    "vite": "^4.5.2",
+    "prettier": "^3.0.3",
+    "typescript": "~5.2.0",
+    "vite": "^4.4.11",
     "vue-tsc": "^1.8.19"
   }
 }
