refactor: check apple status fix & move subscribe module

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:forum": "pnpm -F cc.naily.six.forum start:dev",
     "dev:app": "pnpm -F cc.naily.six.app start:dev",
     "dev:gpt": "pnpm -F cc.naily.six.gpt start:dev",
+    "dev:shop": "pnpm -F cc.naily.six.shop start:dev",
     "build": "tsx scripts/buildDeps.ts",
     "build:passport": "pnpm -F cc.naily.six.passport build",
     "build:light": "pnpm -F cc.naily.six.lightning build",
@@ -20,6 +21,7 @@
     "build:forum": "pnpm -F cc.naily.six.forum build",
     "build:app": "pnpm -F cc.naily.six.app build",
     "build:gpt": "pnpm -F cc.naily.six.gpt build",
+    "build:shop": "pnpm -F cc.naily.six.shop build",
     "build:frontend": "pnpm -F cc.naily.six.panel.frontend build",
     "start:frontend": "pnpm -F cc.naily.six.panel.frontend preview",
     "start:passport": "pnpm -F cc.naily.six.passport start:prod",
@@ -28,6 +30,7 @@
     "start:app": "pnpm -F cc.naily.six.app start:prod",
     "start:forum": "pnpm -F cc.naily.six.forum start:prod",
     "start:gpt": "pnpm -F cc.naily.six.gpt start:prod",
+    "start:shop": "pnpm -F cc.naily.six.shop start:prod",
     "format": "prettier --write ./",
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install && pnpx prisma generate && pnpm build:shared && pnpm build",
