feat: shop for light

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:auth": "pnpm -F cc.naily.six.auth build",
     "build:forum": "pnpm -F cc.naily.six.forum build",
     "build:app": "pnpm -F cc.naily.six.app build",
+    "build:shop": "pnpm -F cc.naily.six.shop build",
     "build:gpt": "pnpm -F cc.naily.six.gpt build",
     "build:frontend": "pnpm -F cc.naily.six.panel.frontend build",
     "start:frontend": "pnpm -F cc.naily.six.panel.frontend preview",
@@ -26,6 +27,7 @@
     "start:light": "pnpm -F cc.naily.six.lightning start:prod",
     "start:common": "pnpm -F cc.naily.six.common start:prod",
     "start:app": "pnpm -F cc.naily.six.app start:prod",
+    "start:shop": "pnpm -F cc.naily.six.shop start:prod",
     "start:forum": "pnpm -F cc.naily.six.forum start:prod",
     "start:gpt": "pnpm -F cc.naily.six.gpt start:prod",
     "preview": "pnpm -F cc.naily.six.panel.frontend preview",
