--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -21,7 +21,8 @@
     "vue-facing-decorator": "^3.0.4",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue-router": "^4.2.5",
-    "naive-ui": "^2.37.3"
+    "naive-ui": "^2.37.3",
+    "@vicons/carbon": "^0.12.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
