--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -22,7 +22,8 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue-router": "^4.2.5",
     "naive-ui": "^2.37.3",
-    "@vicons/carbon": "^0.12.0"
+    "@vicons/carbon": "^0.12.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
