--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
+    "express": "^4.18.3",
     "glob": "^10.3.10",
     "ioredis": "^5.3.2",
     "joi": "^17.12.1",
