--- a/apps/passport/package.json
+++ b/apps/passport/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production 0x -D 0x-{pid} ../../resources/dist/apps/passport/src/main.js",
+    "start:prod": "cross-env NODE_ENV=production pnpx 0x -D 0x-{pid} ../../resources/dist/apps/passport/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
