feat: new relic

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "md5": "^2.3.0",
     "mongodb": "^6.3.0",
     "nestjs-i18n": "^10.4.0",
+    "newrelic": "^11.12.0",
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "pm2": "^5.3.1",
