feat: 添加微软账号

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
     "subscribe": "cart",
     "interceptors": "controller"
   },
-  "prisma.fileWatcher": true
+  "prisma.fileWatcher": true,
+  "cSpell.words": ["naily"]
 }
