--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lint": "eslint \"./**/*.ts\" --fix",
     "prepare": "husky install && pnpx prisma generate && pnpm build:shared && pnpm build",
     "generate": "pnpx prisma generate",
+    "prisma-multischema": "prisma-multischema",
     "lint-staged": "lint-staged",
     "0x": "0x"
   },
