--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@apple/app-store-server-library": "^1.0.1",
     "@nailyjs.nest.modules/app-store": "^1.0.5",
     "@nailyjs.nest.modules/prisma": "^1.3.6",
+    "@nailyjs.nest.modules/redlock": "^0.0.3",
     "@nailyjs.nest.modules/tencentcloud": "^1.0.6",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/cache-manager": "^2.2.0",
