--- a/apps/passport/package.json
+++ b/apps/passport/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=production nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production pnpx 0x -D 0x-{pid} ../../resources/dist/apps/passport/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
