--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "pm2": "^5.3.1",
+    "pnpm": "8.8.0",
     "prisma": "latest",
     "prisma-multischema": "^1.1.4",
     "reflect-metadata": "^0.1.13",
