--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "passport": "^0.7.0",
     "pm2": "^5.3.1",
     "pnpm": "8.8.0",
-    "prisma": "latest",
+    "prisma": "5.22.0",
     "prisma-multischema": "^1.1.4",
     "reflect-metadata": "^0.1.13",
     "rollup": "^4.9.6",
